Stucture for Gallery insertion

--- a/InteractivePhotoGallery/index.html
+++ b/InteractivePhotoGallery/index.html
@@ -10,6 +10,19 @@
   <div class="gallery">
     <!--Gallery content-->
 </div>
+<div class="gallery">
+  <div class="thumbnail">
+      <img src="images/photo1.jpg" alt="Photo 1">
+  </div>
+  <div class="thumbnail">
+      <img src="images/photo2.jpg" alt="Photo 2">
+  </div>
+  <!-- Add more thumbnails as needed -->
+  <div class="fullsize">
+      <img src="images/photo1.jpg" alt="Fullsize Photo">
+  </div>
+</div>
+
 <script src="js/script.js"></script>
 </body>
 </html>
